# ezCV-GUI

./: .gitignore  README.md  pyproject.toml  setup.py
ezcv_gui/: controller.py  main.py  utils.py
ezcv_gui/widgets/: central.py  media.py  operator.py  parameter.py  pipeline.py
scripts/: ezcv-gui.py
tests/: conftest.py  test_controller.py  test_utils.py
tests/widgets/: test_media.py  test_operator.py  test_pipeline.py
