[tool.poetry]
name = "ezcv-gui"
version = "0.1.0"
description = ""
authors = ["Frederico Tommasi Caroli"]

[tool.poetry.dependencies]
python = "^3.7,<3.11"
ezcv = { git = "https://github.com/fredtcaroli/ezCV" }
ezcv_operators = { git = "https://github.com/fredtcaroli/ezCV-operators" }
PyQt6 = "^6.2.2"
numpy = "^1.21.4"
importlib-metadata = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-qt = "^4.0.2"
pytest-datadir = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
